# freesynd

./: .gitignore  CMakeLists.txt  INSTALL  README.md  TODO.txt  freesynd.ini
data/lang/: spanish.lng
data/ref/: original_data.crc
engine/: CMakeLists.txt
engine/include/fs-engine/: system.h  system_sdl.h
engine/include/fs-engine/gfx/: fontmanager.h  screen.h  sprite.h  tile.h  tilemanager.h
engine/include/fs-engine/sound/: music.h  musicmanager.h  sdlmixersound.h  sound.h  soundmanager.h  xmidi.h
engine/src/: system_sdl.cpp
engine/src/gfx/: dirtylist.cpp  font.cpp  fontmanager.cpp  screen.cpp  sprite.cpp  spritemanager.cpp  tile.cpp  tilemanager.cpp
engine/src/sound/: audio.cpp  musicmanager.cpp  sdlmixermusic.cpp  sdlmixersound.cpp  soundmanager.cpp  xmidi.cpp
src/: CMakeLists.txt  agent.cpp  agent.h  agentmanager.h  app.cpp  app.h  appcontext.cpp  appcontext.h  dump.cpp  freesynd.cpp  keys.h  map.cpp  map.h  mapmanager.cpp  mapmanager.h  mapobject.cpp  mission.cpp  mission.h  missionmanager.cpp  missionmanager.h  modmanager.h  pathsurfaces.h  ped.cpp  ped.h  pedactions.cpp  pedmanager.cpp  pedmanager.h  pedpathfinding.cpp  resources.h  system.h  system_sdl.cpp  weaponmanager.cpp  weaponmanager.h
src/core/: gamecontroller.h  gamesession.h  missionbriefing.h  researchmanager.cpp  researchmanager.h
src/editor/: animmenu.cpp  editorapp.cpp  editorapp.h  editormenufactory.cpp  editormenufactory.h  fontmenu.cpp  listmissionmenu.cpp  mainmenu.cpp  searchmissionmenu.cpp  searchmissionmenu.h
src/gfx/: dirtylist.cpp  fliplayer.cpp  fliplayer.h  font.cpp  font.h  fontmanager.h  screen.cpp  screen.h  spritemanager.cpp  tilemanager.cpp  tilemanager.h
src/ia/: actions.h  behaviour.h
src/menus/: agentselectorrenderer.cpp  briefmenu.cpp  confmenu.cpp  debriefmenu.cpp  flimenu.cpp  flimenu.h  gamemenufactory.h  gameplaymenu.cpp  loadingmenu.cpp  loadingmenu.h  loadsavemenu.cpp  mapmenu.cpp  maprenderer.cpp  maprenderer.h  menu.cpp  menu.h  menumanager.cpp  menumanager.h  minimaprenderer.cpp  minimaprenderer.h  selectmenu.cpp  widget.cpp  widget.h
src/model/: objectivedesc.h  research.h  squad.h  vehicle.cpp  weapon.cpp  weapon.h
src/sound/: audio.cpp  audio.h  music.h  musicmanager.cpp  musicmanager.h  sdlmixermusic.cpp  sound.h  soundmanager.cpp
src/utils/: file.cpp  file.h  log.cpp  log.h
utils/: CMakeLists.txt
utils/include/fs-utils/: common.h
utils/include/fs-utils/crc/: dernc.h
utils/include/fs-utils/io/: portablefile.h
utils/include/fs-utils/misc/: timer.h
utils/src/: ccrc32.cpp  configfile.cpp  dernc.cpp  file.cpp  log.cpp  portablefile.cpp  seqmodel.cpp
